Fixing alignment of blog search

--- a/public/css/saperstone-studios.css
+++ b/public/css/saperstone-studios.css
@@ -236,6 +236,7 @@ blockquote p {
 #nav-search-input {
     display: inline-block;
     margin-left: 5px;
+    width: 115px;
 }
 
 #nav-search-icon {
